6.4/_sources/module/gmtselect.rst.txt
.. index:: ! gmtselect
.. include:: common_SYN_OPTs.rst_

gmtselect
=========

:官方文档: :doc:`gmt:gmtselect`
:简介: 筛选符合某个特定准则的数据

该命令会从输入文件中读取前两列作为经度和纬度，并判断该点是否符合一定的空间准则，
以筛选出符合条件的记录。输入文件中仅前两列会被使用。

七个空间准则包括：

#. 在矩形区域内（ ``-R`` 和 ``-J`` ）
#. 与点文件中的每个点的距离在一定范围之内
#. 与线文件中的每条线的距离在一定范围之内
#. 在多边形文件所指定的多边形内
#. 在某个地理区域内（需要海岸线数据）
#. Z 值在某个范围内
#. 该点所在的网格单元内具有有效值（即非零和非NaN的值）

七个空间准则
------------

准则1
+++++

使用 ``-R`` 和 ``-J`` 筛选出在该区域内的点::

    gmt select points.xy -R0/5/0/5

准则2
+++++

筛选所有与点文件中的每个点的距离在一定范围内的点。

.. _-C:

**-C**\ *pointfile*\ \|\ *lon*/*lat*\ **+d**\ *dist*
    该准则会筛选出与文件 *pointfile* 中的每个点的距离在 *dist*
    之内的记录。

    若 *dist* 等于0，则 *pointfile* 中的第三列是每个数据点各自的
    影响半径，即筛选出不在任何一个数据点的影响半径内的点。默认情况下
    *dist* 是笛卡尔坐标系下的距离，单位为用户单位。若指定 ``-fg``
    选项，则表明 *dist* 为球面距离。若使用了 |-R| 和 |-J| ，则
    *dist* 表示投影后的纸面距离，单位由参数 :term:`PROJ_LENGTH_UNIT` 决定。

准则3
+++++

筛选所有与线文件中的每条线的距离在一定范围之内的点。

.. _-L:

**-L**\ *linefile*\ **+d**\ *dist*\ [**+p**]
    *linefile* 中包含了一系列线段，该准则会筛选出与这些线段的距离不超过
    *dist* 的记录。

    若 *dist* 等于零，则可以在 *linefile* 中每段数据的段头记录中使用
    ``-D<dist>`` 参数，为每个线段分别指定距离值。

    默认情况下 *dist* 是笛卡尔坐标系下的距离，单位为用户单位。若指定
    ``-fg`` 选项，则表明 *dist* 为球面距离。若使用了 |-R| 和 |-J| ，
    则 *dist* 表示投影后的纸面距离，单位由 :term:`PROJ_LENGTH_UNIT` 决定。

    使用 ``+p`` 则会将数据点垂直投影到线段上，只有投影位置在线段的两个端点内的
    记录才会被保留，即只有线段左右一定距离内的点才会被保留，超过线段两端点的点
    不会被保留。

准则4
+++++

筛选出在某个多边形内的点。

.. _-F:

**-F**\ *polygonfile*
    *polygonfile* 中可以包含一个或多个多边形，该选项筛选出所有在多边形内的
    记录。

准则5
+++++

根据地理特征信息筛选数据。

**-N**\ *wet/dry*
    跳过或保留陆地（dry）/海湖（wet）区域内的点。

    *wet* 和 *dry* 可以取 ``s`` 或 ``k`` ，分别表示 skip 和 keep。
    默认值为 ``-Ns/k`` ，即保留所有位于陆地上的记录，并跳过所有海洋、湖泊中的
    记录。

**-N**\ *ocean/land/lake/island/pond*
    进一步细分地理特征，五项分别表示海洋、陆地、湖泊、岛屿、池塘(?)。每一项均
    可以取 ``s`` 或 ``k`` ，分别表示 skip 和 keep。默认值为 ``-Ns/k/s/k/s`` ，
    等效于 ``-Ns/k``，即仅保留所有陆地上的记录。

.. _-D:

**-D**\ *resolution*\ [**+f**]
    选择海岸线数据的精度，仅与 |-N| 选项一起使用有效。见 :doc:`coast` 中
    |-D| 选项的介绍。

.. include:: explain_-A.rst_

准则6
+++++

筛选Z值在某个范围内的点

.. _-Z:

**-Z**\ *min*\ [/*max*]\ [**+a**]\ [**+c**\ *col*]\ [**+i**]
    判断记录的Z值是否在 *min* 到 *max* 之间或等于 NaN。

    若省略 *max* 则判断Z值是否等于 *min* 。若不限制范围的上限或下限，i
    可以使用 ``-`` 代替。

    若第三列Z值代表时间，想要判断Z值是否在某个时间范围内，需要使用 ``-f2T``
    选项。

    可以使用 **+c**\ *col* 指定记录中的某一列作为Z值，默认以第三列（col=2）
    作为Z值。若想要对多列做类似的测试，可以重复使用 |-Z| 选项，每次指定
    不同的列号。注意：当多次使用 |-N| 选项时，不可使用 ``-Iz`` 选项。

准则7
+++++

根据数据点所在的网格单元内具有有效值（即非零和非NaN的值）来筛选数据。

.. _-G:

**-G**\ *gridmask*
    使用 **-G**\ *gridmask* 指定一个网格文件。对于每个数据点而言，判断其对应的
    网格单元是否具有有效值（即非零或非NaN的值），若该网格单元有有效值，则保留
    该数据点。

其他选项
--------

.. _-E:

**-E**\ [**f**][**n**]
    在判断点是否在一个多边形内时，默认会将恰好在多边形边界线上的点也认为是在
    多边形内，使用该选项会将多边形上的点认为是在多边形外部。
    ``f`` 和 ``n`` 分别修改 |-F| 和 |-N| 选项的行为。

.. _-I:

**-I**\ [**cflrsz**]
    对七个准则取反，即筛选出不符合准则的记录。c、f、g、l、r、s、z分别对应于
    ``-C`` 、 ``-F`` 、 ``-G`` 、 ``-L`` 、 ``-R`` 、 ``-S`` 和 ``-Z`` 。

示例
----

筛选与 ``pts.txt`` 中所有点的距离在300 km以内，与 ``lines.txt`` 中线段的
距离在100 km以外的点::

    gmt select lonlatfile -fg -Cpts.txt+d300k -Llines.txt+d100k -Il > subset

此处需要使用 ``-fg`` 以告知程序正在处理地理数据。

筛选某个区域内所有不在陆地上的点::

    gmt select data.txt -R120/121/22/24 -Dh -Nk/s > subset

筛选 ``quakes.txt`` 中所有位于多边形区域内的点::

    gmt select quakes.txt -Flonlatpath.txt -fg > subset

``stations.txt`` 中的点投影后与 ``origin.txt`` 的距离在5 cm之内的点::

    gmt select stations.txt -Corigin.txt+d5 -R20/50/-10/20 -JM20c \
        --PROJ_LENGTH_UNIT=cm > subset
